k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uebungsverwaltung-frontend
  labels:
    app: uebungsverwaltung
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uebungsverwaltung
  template:
    metadata:
      labels:
        app: uebungsverwaltung
    spec:
      containers:
        - name: uebungsverwaltung
          image: rg.fr-par.scw.cloud/namespace-uebungsverwaltung/uebungsverwaltung-nginx:v27
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: uebungsverwaltung
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
