k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uebungsverwaltung-mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: rg.fr-par.scw.cloud/namespace-uebungsverwaltung/uebungsverwaltung-mongo:v1
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongovolume
              mountPath: /data/db
      volumes:
        - name: mongovolume
          persistentVolumeClaim:
            claimName: mongovolume
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
