k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uebungsverwaltung-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uebungsverwaltung
  template:
    metadata:
      labels:
        app: uebungsverwaltung
    spec:
      containers:
        - name: uebungsverwaltung
          image: rg.fr-par.scw.cloud/namespace-uebungsverwaltung/uebungsverwaltung-node:v6
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /api/260124
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/260124
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: uebungsverwaltung
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
